--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,8 @@ body {
 
 div.game-title {
     height: 93px;
-    margin-bottom: 47px;
+    width: 100%;
+    margin-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,23 +16,53 @@ h1 {
     font-family: "Roboto", sans-serif;
     font-weight: bold;
     color: #75B79E;
+    margin-top: 40px;
+}
+
+h1 div {
+    display: inline;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 ul {
     display: flex;
     flex-wrap: wrap;
-    width: 50vw;
-    margin: 0 auto;
+    width: 50%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 li {
     width: 117px;
-    margin-right: 34px;
-    margin-bottom: 34px;
+    margin: 17px;
     height: 146px;
     background-color: #A7E9AF;
 }
 
 @media (max-width: 600px) {
-    
+
+    div.game-title {
+        margin-bottom: 13px;
+    }
+
+    h1 {
+        font-size: 36px;
+    }
+
+    h1 div{
+         display: block;
+         margin-left: calc(50% - 56px);
+    }
+
+    li {
+        margin-top: 34px;
+    }
 }
